# onfridge_firmware

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.esp-idf-base  README.md  check_model_info.py  docker-compose.yml  esp_exception_decoder.py  myStackTrace.txt  partitions.csv  platformio.ini  requirements.txt  sound_receiver.py
components/: CMakeLists.txt
components/esp-tflite-micro/: CMakeLists.txt
data/: wake_word_model.tflite
esp32/: CMakeLists.txt  partitions.csv
esp32/main/: CMakeLists.txt  main.c
scripts/: set_new_id.sh
src/: CMakeLists.txt  check_memory_status.cpp  microphone.c  speaker.c  wake_word.c  wake_word.cpp  wake_word_model.h
